Refactor gateway service to use Spring Security OAuth2 for JWT validation